--- a/settings.gradle
+++ b/settings.gradle
@@ -40,6 +40,7 @@ include 'core:id-generator:tsid'
 include 'core:id-generator:mock-id-generator'
 include 'core:id-generator:id-generator-starter'
 include 'core:authorization:authorization-core'
+include 'core:authorization:authorization-aop'
 
 include 'user'
 include 'user:user-domain'
@@ -47,4 +48,3 @@ include 'user:user-jpa-adapter'
 include 'user:user-application'
 include 'user:user-web-adaptor'
 include 'auth:auth-interceptor'
-
