--- a/survey/application/build.gradle
+++ b/survey/application/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
+    implementation project(':core:authorization:authorization-core')
     implementation project(':survey:domain')
-    testImplementation project(':survey:domain')
 
     implementation project(':core:id-generator:id-generator-starter')
 
