--- a/survey/web-adaptor/build.gradle
+++ b/survey/web-adaptor/build.gradle
@@ -3,6 +3,8 @@ dependencies {
     implementation project(':survey:application')
     testImplementation project(':survey:application')
 
+    implementation project(':core:authorization:authorization-aop')
+
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
