--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,10 @@ rootProject.name = 'luffy'
 
 include 'core'
 include 'core:data'
+include 'core:exception-handler'
+include 'core:time'
+include 'core:secure'
+include 'core:authorization'
 
 include 'api'
 include 'api:api-mock'
@@ -37,14 +41,12 @@ include 'core:id-generator:id-core'
 include 'core:id-generator:tsid'
 include 'core:id-generator:mock-id-generator'
 include 'core:id-generator:id-generator-starter'
-
-include 'core:exception-handler'
-include 'core:time'
-include 'core:secure'
+include 'core:authorization:authorization-core'
+include 'core:authorization:authorization-aop'
 
 include 'user'
 include 'user:user-domain'
 include 'user:user-jpa-adapter'
 include 'user:user-application'
 include 'user:user-web-adaptor'
-
+include 'auth:auth-interceptor'
