--- a/survey/web-adaptor/build.gradle
+++ b/survey/web-adaptor/build.gradle
@@ -1,8 +1,8 @@
 dependencies {
     implementation project(':survey:domain')
     implementation project(':survey:application')
-    testImplementation project(':survey:application')
 
+    implementation project(':core:secure')
     implementation project(':core:authorization:authorization-aop')
 
     implementation 'javax.validation:validation-api:2.0.1.Final'
