--- a/support/logging/build.gradle
+++ b/support/logging/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    implementation "io.sentry:sentry-logback:${property("sentryVersion")}"
+    implementation "io.sentry:sentry-logback:${property("sentryLogBackVersion")}"
 }
