--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v3
       - name: docker setup
         uses: docker-practice/actions-setup-docker@master
+      - name: docker network setup
+        run: docker network create e2e-net
       - name: run dbms
         run: |
           docker run -it --name database --network e2e-net -e MYSQL_ROOT_PASSWORD=0000 -e MYSQL_DATABASE=luffy -d mysql:8.0.33
