--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -25,7 +25,9 @@ jobs:
       - name: build nalab-server-docker-image
         run: docker build --tag luffy:e2e --build-arg DB_URL=jdbc:mysql://database:3306/luffy --build-arg DB_USERNAME=root --build-arg DB_PASSWORD=0000 --build-arg JWT_SECRET=fore2e .
       - name: run nalab-server
-        run: docker run --name nalab-server --network e2e-net -p 8080:8080 -d luffy:e2e
+        run: |
+          docker run --name nalab-server --network e2e-net -p 8080:8080 -d luffy:e2e 
+          docker logs nalab-server
       - name: e2e test
         run: |
           curl --location --remote-name https://github.com/Orange-OpenSource/hurl/releases/download/3.0.1/hurl_3.0.1_amd64.deb
