--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -18,14 +18,14 @@ jobs:
       - name: docker network setup
         run: docker network create e2e-net
       - name: run dbms
-        run: docker run -it --name database --network e2e-net -e MYSQL_ROOT_PASSWORD=0000 -e MYSQL_DATABASE=luffy -d mysql:8.0.33
+        run: docker run --rm -it --name database --network e2e-net -e MYSQL_ROOT_PASSWORD=0000 -e MYSQL_DATABASE=luffy -d mysql:8.0.33
       - name: build nalab-server
         run: ./gradlew clean build
       - name: build nalab-server-docker-image
-        run: docker build --tag luffy:e2e --build-arg DB_URL=jdbc:mysql://database:3306/luffy --build-arg DB_USERNAME=root --build-arg DB_PASSWORD=0000 --build-arg JWT_SECRET=fore2e .
+        run: docker build ---tag luffy:e2e --build-arg DB_URL=jdbc:mysql://database:3306/luffy --build-arg DB_USERNAME=root --build-arg DB_PASSWORD=0000 --build-arg JWT_SECRET=fore2e .
       - name: run nalab-server
-        run: docker run --name nalab-server --network e2e-net -d luffy:e2e
+        run: docker run --rm -it --name nalab-server --network e2e-net -d luffy:e2e
       - name: build hurl image
         run: docker build --tag hurl:e2e support/e2e/
       - name: e2e test
-        run: docker run --network e2e-net hurl:e2e
+        run: docker run --rm --network e2e-net hurl:e2e
