--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -22,7 +22,7 @@ jobs:
       - name: build nalab-server
         run: ./gradlew clean build
       - name: build nalab-server-docker-image
-        run: docker build ---tag luffy:e2e --build-arg DB_URL=jdbc:mysql://database:3306/luffy --build-arg DB_USERNAME=root --build-arg DB_PASSWORD=0000 --build-arg JWT_SECRET=fore2e .
+        run: docker build --tag luffy:e2e --build-arg DB_URL=jdbc:mysql://database:3306/luffy --build-arg DB_USERNAME=root --build-arg DB_PASSWORD=0000 --build-arg JWT_SECRET=fore2e .
       - name: run nalab-server
         run: docker run --rm -it --name nalab-server --network e2e-net -d luffy:e2e
       - name: build hurl image
