--- a/support/e2e/Dockerfile
+++ b/support/e2e/Dockerfile
@@ -10,7 +10,7 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
 
 RUN apt-get install -y curl
 
-RUN curl --location --remote-name https://github.com/Orange-OpenSource/hurl/releases/download/3.0.1/hurl_3.0.1_amd64.deb
-RUN apt-get update && apt-get install -y ./hurl_3.0.1_amd64.deb
+RUN curl -k --location --remote-name https://github.com/Orange-OpenSource/hurl/releases/download/4.0.0/hurl_4.0.0_amd64.deb
+RUN apt-get update && apt-get install -y ./hurl_4.0.0_amd64.deb
 
 ENTRYPOINT dockerize -wait tcp://nalab-server:8080 -timeout 300s && hurl --very-verbose --color --test hurls/*.hurl
